--- a/index.html
+++ b/index.html
@@ -329,14 +329,14 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-Present</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">Merkle</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International. 
+						<span class="date">2024-Present</span>
+						<h2>Trainee Linux Administrator</h2>
+						<span class="position">Acuiti Labs</span>
+						<p class="mt-4">. 
 							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+								<li>Automate infrastructure deployment and server management using Terraform, Ansible, and Bash scripting to improve efficiency.</li>
+								<li>Set up and maintain CI/CD pipelines with Jenkins and GitHub Actions, integrating DevOps workflows for seamless deployment.</li>
+								<li>Manage Docker containers and orchestrate scalable workloads with Kubernetes for efficient application deployment</li>
 							</ul>
 						</p>
 					</div>
