--- a/index.html
+++ b/index.html
@@ -345,14 +345,14 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
-						<h2>Senior Data Analyst</h2>
+						<span class="date">2019-2020</span>
+						<h2>Web Developer Intern</h2>
 						<span class="position">iQuanti</span>
-						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands. 
+						<p class="mt-4"> 
 							<ul>
-								<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
-								<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
-								<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its feature improvement.</li>
+								<li>Completed web developer training and internship in 20, Gained proficiency in HTML, CSS, JavaScript, and PHP.</li>
+								<li>Developed websites and web applications using frameworks like Bootstrap and Laravel,Collaborated with a team of developers on projects including e-commerce platforms and website updates .</li>
+								<li>Gained experience in team collaboration, project management, and delivering work within deadlines..</li>
 							</ul>
 						</p>
 					</div>
