--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 						<span class="date">2024-Present</span>
 						<h2>Trainee Linux Administrator</h2>
 						<span class="position">Acuiti Labs</span>
-						<p class="mt-4">. 
+						<p class="mt-4">
 							<ul>
 								<li>Automate infrastructure deployment and server management using Terraform, Ansible, and Bash scripting to improve efficiency.</li>
 								<li>Set up and maintain CI/CD pipelines with Jenkins and GitHub Actions, integrating DevOps workflows for seamless deployment.</li>
@@ -372,9 +372,9 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2018</span>
+    					<span class="date">2020-2023</span>
     					<h2>Bachelor of Engineering</h2>
-    					<span class="position">Visvesvaraya Technological University</span>
+    					<span class="position">Bharathi Vidyapeeth College Of Engineering Pune</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
     			</div>
@@ -382,8 +382,8 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2012-2013</span>
-    					<h2>Higher Secondary School</h2>
-    					<span class="position">Army Public School</span>
+    					<h2>Diploam In Technology</h2>
+    					<span class="position">Ekalavya Shikshan Sansthas Polytechnic Pune</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
 				</div>
