--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2012-2013</span>
-    					<h2>Diploam In Technology</h2>
+    					<h2>Diploma In Technology</h2>
     					<span class="position">Ekalavya Shikshan Sansthas Polytechnic Pune</span>
     					<p class="mt-4">Grade: First class distinction.</p>
     				</div>
