--- a/index.html
+++ b/index.html
@@ -405,40 +405,40 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample Projects on FullStack Developement and DevOps.</p>
           </div>
         </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://github.com/ketansonwane7781/book-review-app" class="block-20 zoom-effect" style="background-image: url('p1.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ketansonwane7781">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
+                <h3 class="heading"><a href="https://github.com/ketansonwane7781">Book Review App</a></h3>
+                <p>A full-stack web application where users can view, add, and manage reviews for their favorite books. Built using the MEAN Stack: MongoDB, Express.js, Angular, and Node.js..</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p2.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ketansonwane7781">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <h3 class="heading"><a href="https://github.com/ketansonwane7781/devconnect">DevConnect - Full Stack Developer Networking Platform</a></h3>
+                <p>DevConnect is a full-stack web application that allows developers to connect, build profiles, and interact. Built using the MERN stack (MongoDB, Express, React, Node.js).</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/ketansonwane7781/jenkins_Slack_Bot" class="block-20 zoom-effect" style="background-image: url('images/p3.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ketansonwane7781">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <h3 class="heading"><a href="https://github.com/ketansonwane7781">jenkins_Slack_Bots</a></h3>
+                <p>Automate your deployments using Jenkins, and trigger them directly from Slack with a custom bot — all running seamlessly in Docker containers..</p>
               </div>
             </div>
           </div>
@@ -448,23 +448,23 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p_4.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/ketansonwane7781">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/ketansonwane1/Building-an-end-to-end-AWS-devsecops-CI-CD-pipeline-with-SAST-and-DASTtools">Building-an-end-to-end-AWS-devsecops-CI-CD-pipeline-with-SAST-and-DASTtools</a></h3>
+				  <p>This project creates an automated, secure CI/CD pipeline on AWS, integrating essential DevSecOps tools like SonarQube (SAST), OWASP ZAP (DAST), and Trivy (Container Security)..</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p_5.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/ketansonwane7781">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/ketansonwane1/Domain-Status-Code-Checker">Domain-Status-Code-Checker</a></h3>
+				  <p>The Domain Status Checker script is a simple tool built in Python that allows you to quickly check the status of multiple domains, including their HTTP and HTTPS endpoints.</p>
 				</div>
 			  </div>
 			</div>
