--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/ketansonwane7781/book-review-app" class="block-20 zoom-effect" style="background-image: url('p1.png');">
+              <a href="https://github.com/ketansonwane7781/book-review-app" class="block-20 zoom-effect" style="background-image: url('images/p1.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -448,7 +448,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p_4.png');">
+				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p4.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -459,7 +459,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p_5.png');">
+				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p5.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
