--- a/index.html
+++ b/index.html
@@ -415,14 +415,14 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ketansonwane7781">Book Review App</a></h3>
+                <h3 class="heading"><a href="https://github.com/ketansonwane7781/book-review-app">Book Review App</a></h3>
                 <p>A full-stack web application where users can view, add, and manage reviews for their favorite books. Built using the MEAN Stack: MongoDB, Express.js, Angular, and Node.js..</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p2.png');">
+              <a href="https://github.com/ketansonwane7781/devconnect" class="block-20 zoom-effect" style="background-image: url('images/p2.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -437,7 +437,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ketansonwane7781">jenkins_Slack_Bots</a></h3>
+                <h3 class="heading"><a href="https://github.com/ketansonwane7781/jenkins_Slack_Bot">jenkins_Slack_Bots</a></h3>
                 <p>Automate your deployments using Jenkins, and trigger them directly from Slack with a custom bot — all running seamlessly in Docker containers..</p>
               </div>
             </div>
@@ -448,7 +448,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p4.png');">
+				<a href="https://github.com/ketansonwane1/Building-an-end-to-end-AWS-devsecops-CI-CD-pipeline-with-SAST-and-DASTtool" class="block-20 zoom-effect" style="background-image: url('images/p4.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -459,7 +459,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ketansonwane7781" class="block-20 zoom-effect" style="background-image: url('images/p5.png');">
+				<a href="https://github.com/ketansonwane1/Domain-Status-Code-Checker" class="block-20 zoom-effect" style="background-image: url('images/p5.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
