--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://github.com/ketansonwane7781/portfolio.github.io/blob/main/images/ketan_sonwane_DevOps_resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -526,7 +526,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">ketansonwane603@gmail.com</a></p>
+	            <p><a href="ketansonwane603@gmail.com">ketansonwane603@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -535,7 +535,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://github.com/ketansonwane7781/portfolio.github.io/blob/main/images/ketan_sonwane_DevOps_resume.pdf">resumelink</a></p>
 	          </div>
           </div>
 
