--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://github.com/ketansonwane7781/portfolio.github.io/blob/main/images/ketan_sonwane_DevOps_resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1OIPO14dT0Nxx_ZZqqPh_KqeCSyuol6XY/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -535,7 +535,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://github.com/ketansonwane7781/portfolio.github.io/blob/main/images/ketan_sonwane_DevOps_resume.pdf">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1OIPO14dT0Nxx_ZZqqPh_KqeCSyuol6XY/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
@@ -552,9 +552,8 @@
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href=""><span class="icon-youtube"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/ketansonwane/"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="https://twitter.com/"><span class="icon-twitter"></span></a></li>
-					  <li class="ftco-animate"><a href="https://twitter.com/"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://x.com/sonwane_ketan?s=09"><span class="icon-twitter"></span></a></li>
+				      <li class="ftco-animate"><a href="https://www.instagram.com/_ketan_sonwane__7500?igsh=MTQ1OTNiaDl1bTZkaQ=="><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
