--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 						<br>
 						<br>
-			            <h2>Linux Administrator</h2>
+			            <h2>Software Engineer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://github.com/ketansonwane7781" class="btn btn-primary py-3 px-4">GitHub</a> 
