--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Ketan Sonawane</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Linux Administrator</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Software Engineer</span></p>
 										<p><span class="title-s">Experience: </span> <span>7 Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Pune, India</span></p>
 									  </div>
@@ -322,13 +322,14 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2024-Present</span>
-						<h2>Trainee Linux Administrator</h2>
+						<h2>Software Engineer</h2>
 						<span class="position">Acuiti Labs</span>
 						<p class="mt-4">
 							<ul>
-								<li>Automate infrastructure deployment and server management using Terraform, Ansible, and Bash scripting to improve efficiency.</li>
-								<li>Set up and maintain CI/CD pipelines with Jenkins and GitHub Actions, integrating DevOps workflows for seamless deployment.</li>
-								<li>Manage Docker containers and orchestrate scalable workloads with Kubernetes for efficient application deployment</li>
+								<li> Developed backend services and RESTful APIs using Java, enabling secure and scalable integration across enterprise applications. </li>
+								<li>Worked with MongoDB to design and manage NoSQL databases, optimizing queries and ensuring high-performance data access. </li>
+								<li>Integrated CI/CD pipelines using Jenkins, Git, and Docker to automate build, test, and deployment workflows.</li>
+								<li>Deployed Java-based applications on AWS, ensuring performance optimization and cost efficiency.</li>
 							</ul>
 						</p>
 					</div>
